@@ -1,2 +1,2 @@
-EBUILD pianobar-9999.ebuild 736 RMD160 2a08f95680086fa70aadb9a1913da68441d2d624 SHA1 6f0680de820379b406de6db31b9f37566f8281a2 SHA256 107a92999fba93dc450d8f9510147744a63237230c53978147bf37a2be0c9e55
-MISC ChangeLog 304 RMD160 f49d64938e8781188f8a5fce39b5b295b9cdb6d7 SHA1 eb2467d1da33f7d0b9a67d625bc27618568206c3 SHA256 5d4dd2dc9b3415afbdc3d5618720f15a953d5c4e4edfd2e6195979d852657d4f
+EBUILD pianobar-9999.ebuild 877 RMD160 1d521490b66842f5430af5ab443b266699a6c8fd SHA1 4e1f8b50490fc357834493a24ada3732cae9949b SHA256 acad37d4a5c1c07ca7aceca89fb40f421beda756704244755acbed979ef137bb
+MISC ChangeLog 545 RMD160 3f5f35f936377f753ee8dcf062161d7baa287533 SHA1 3058fb98d3656fc040912dcf3cfcc2e3477572d9 SHA256 ae13893e774a8073db5f1a61800d358301e807e6bc973405de72bdb02db50049
